# pdm-publish

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: automerge.yaml  ci.yaml
scripts/: update-readme
src/pdm_publish/: __init__.py  command.py  config.py  core.py
tests/: conftest.py  test_core.py
